--- a/Convert_to_CSV.ipynb
+++ b/Convert_to_CSV.ipynb
@@ -153,25 +153,7 @@
             "Setting up libeccodes-data (2.24.2-1) ...\n",
             "Setting up libeccodes0:amd64 (2.24.2-1) ...\n",
             "Setting up libeccodes-dev:amd64 (2.24.2-1) ...\n",
-            "Processing triggers for libc-bin (2.35-0ubuntu3.4) ...\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbmalloc.so.2 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libur_adapter_level_zero.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbmalloc_proxy.so.2 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind_2_0.so.3 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libur_adapter_opencl.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libur_loader.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbb.so.12 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind.so.3 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind_2_5.so.3 is not a symbolic link\n",
-            "\n"
+            "Processing triggers for libc-bin (2.35-0ubuntu3.2) ...\n"
           ]
         }
       ]
@@ -179,53 +161,18 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "import cfgrib\n",
-        "import pandas as pd\n",
-        "\n",
-        "# Define the path to your GRIB file\n",
-        "grib_file_path = '/content/adaptor.mars.internal-1722221671.640568-12288-2-099b30a0-3cef-4fed-b668-f2733c6ed68b.grib'\n",
-        "\n",
-        "# Open the GRIB file\n",
-        "ds = cfgrib.open_dataset(grib_file_path)\n",
-        "\n",
-        "# Convert to a pandas DataFrame\n",
-        "df = ds.to_dataframe().reset_index()\n",
-        "\n",
-        "# Mount Google Drive\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "\n",
-        "# Step 4: Save the DataFrame as a CSV file\n",
-        "csv_file_path = '/content/drive/My Drive/Realoutput.csv' # Now this path should exist\n",
-        "df.to_csv(csv_file_path, index=False)\n",
-        "\n",
-        "print(f\"CSV file saved to {csv_file_path}\")"
+        "import xarray as xr\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "ds = xr.tutorial.open_dataset('air_temperature')\n",
+        "ds.air.isel(time=0).plot(cmap='coolwarm')\n",
+        "plt.show()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GSIE5qN8RDbY",
-        "outputId": "0b7d89a3-d13f-4c21-ad4e-96f16f385d24"
+        "id": "ciVVLLMkRgts"
       },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [""
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "CSV file saved to /content/drive/My Drive/Realoutput.csv\n"
-          ]
-        }
-      ]
-    },
+      "execution_count": null,
+      "outputs": []
+    }
   ]
 }
