--- a/Convert_to_CSV.ipynb
+++ b/Convert_to_CSV.ipynb
@@ -153,7 +153,25 @@
             "Setting up libeccodes-data (2.24.2-1) ...\n",
             "Setting up libeccodes0:amd64 (2.24.2-1) ...\n",
             "Setting up libeccodes-dev:amd64 (2.24.2-1) ...\n",
-            "Processing triggers for libc-bin (2.35-0ubuntu3.2) ...\n"
+            "Processing triggers for libc-bin (2.35-0ubuntu3.4) ...\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbbmalloc.so.2 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libur_adapter_level_zero.so.0 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbbmalloc_proxy.so.2 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind_2_0.so.3 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libur_adapter_opencl.so.0 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libur_loader.so.0 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbb.so.12 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind.so.3 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind_2_5.so.3 is not a symbolic link\n",
+            "\n"
           ]
         }
       ]
@@ -161,18 +179,130 @@
     {
       "cell_type": "code",
       "source": [
-        "import xarray as xr\n",
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
-        "ds = xr.tutorial.open_dataset('air_temperature')\n",
-        "ds.air.isel(time=0).plot(cmap='coolwarm')\n",
-        "plt.show()"
+        "\n",
+        "import cfgrib\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Define the path to your GRIB file\n",
+        "grib_file_path = '/content/adaptor.mars.internal-1722221671.640568-12288-2-099b30a0-3cef-4fed-b668-f2733c6ed68b.grib'\n",
+        "\n",
+        "# Open the GRIB file\n",
+        "ds = cfgrib.open_dataset(grib_file_path)\n",
+        "\n",
+        "# Convert to a pandas DataFrame\n",
+        "df = ds.to_dataframe().reset_index()\n",
+        "\n",
+        "# Mount Google Drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# Step 4: Save the DataFrame as a CSV file\n",
+        "csv_file_path = '/content/drive/My Drive/Realoutput.csv' # Now this path should exist\n",
+        "df.to_csv(csv_file_path, index=False)\n",
+        "\n",
+        "print(f\"CSV file saved to {csv_file_path}\")"
       ],
       "metadata": {
-        "id": "ciVVLLMkRgts"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GSIE5qN8RDbY",
+        "outputId": "0b7d89a3-d13f-4c21-ad4e-96f16f385d24"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "ERROR:cfgrib.dataset:skipping variable: paramId==228023 shortName='cbh'\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 721, in build_dataset_components\n",
+            "    dict_merge(variables, coord_vars)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 639, in dict_merge\n",
+            "    raise DatasetBuildError(\n",
+            "cfgrib.dataset.DatasetBuildError: key present and new value is different: key='time' value=Variable(dimensions=(), data=1704067200) new_value=Variable(dimensions=(), data=1704045600)\n",
+            "ERROR:cfgrib.dataset:skipping variable: paramId==228001 shortName='cin'\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 721, in build_dataset_components\n",
+            "    dict_merge(variables, coord_vars)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 639, in dict_merge\n",
+            "    raise DatasetBuildError(\n",
+            "cfgrib.dataset.DatasetBuildError: key present and new value is different: key='time' value=Variable(dimensions=(), data=1704067200) new_value=Variable(dimensions=(), data=1704045600)\n",
+            "ERROR:cfgrib.dataset:skipping variable: paramId==143 shortName='cp'\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 721, in build_dataset_components\n",
+            "    dict_merge(variables, coord_vars)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 639, in dict_merge\n",
+            "    raise DatasetBuildError(\n",
+            "cfgrib.dataset.DatasetBuildError: key present and new value is different: key='time' value=Variable(dimensions=(), data=1704067200) new_value=Variable(dimensions=(), data=1704132000)\n",
+            "ERROR:cfgrib.dataset:skipping variable: paramId==228218 shortName='crr'\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 721, in build_dataset_components\n",
+            "    dict_merge(variables, coord_vars)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 639, in dict_merge\n",
+            "    raise DatasetBuildError(\n",
+            "cfgrib.dataset.DatasetBuildError: key present and new value is different: key='time' value=Variable(dimensions=(), data=1704067200) new_value=Variable(dimensions=(), data=1704045600)\n",
+            "ERROR:cfgrib.dataset:skipping variable: paramId==228029 shortName='i10fg'\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 721, in build_dataset_components\n",
+            "    dict_merge(variables, coord_vars)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 639, in dict_merge\n",
+            "    raise DatasetBuildError(\n",
+            "cfgrib.dataset.DatasetBuildError: key present and new value is different: key='time' value=Variable(dimensions=(), data=1704067200) new_value=Variable(dimensions=(), data=1704045600)\n",
+            "ERROR:cfgrib.dataset:skipping variable: paramId==142 shortName='lsp'\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 721, in build_dataset_components\n",
+            "    dict_merge(variables, coord_vars)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 639, in dict_merge\n",
+            "    raise DatasetBuildError(\n",
+            "cfgrib.dataset.DatasetBuildError: key present and new value is different: key='time' value=Variable(dimensions=(), data=1704067200) new_value=Variable(dimensions=(), data=1704132000)\n",
+            "ERROR:cfgrib.dataset:skipping variable: paramId==228219 shortName='lsrr'\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 721, in build_dataset_components\n",
+            "    dict_merge(variables, coord_vars)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 639, in dict_merge\n",
+            "    raise DatasetBuildError(\n",
+            "cfgrib.dataset.DatasetBuildError: key present and new value is different: key='time' value=Variable(dimensions=(), data=1704067200) new_value=Variable(dimensions=(), data=1704045600)\n",
+            "ERROR:cfgrib.dataset:skipping variable: paramId==9 shortName='ssro'\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 721, in build_dataset_components\n",
+            "    dict_merge(variables, coord_vars)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 639, in dict_merge\n",
+            "    raise DatasetBuildError(\n",
+            "cfgrib.dataset.DatasetBuildError: key present and new value is different: key='time' value=Variable(dimensions=(), data=1704067200) new_value=Variable(dimensions=(), data=1704132000)\n",
+            "ERROR:cfgrib.dataset:skipping variable: paramId==8 shortName='sro'\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 721, in build_dataset_components\n",
+            "    dict_merge(variables, coord_vars)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 639, in dict_merge\n",
+            "    raise DatasetBuildError(\n",
+            "cfgrib.dataset.DatasetBuildError: key present and new value is different: key='time' value=Variable(dimensions=(), data=1704067200) new_value=Variable(dimensions=(), data=1704132000)\n",
+            "ERROR:cfgrib.dataset:skipping variable: paramId==228 shortName='tp'\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 721, in build_dataset_components\n",
+            "    dict_merge(variables, coord_vars)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 639, in dict_merge\n",
+            "    raise DatasetBuildError(\n",
+            "cfgrib.dataset.DatasetBuildError: key present and new value is different: key='time' value=Variable(dimensions=(), data=1704067200) new_value=Variable(dimensions=(), data=1704132000)\n",
+            "ERROR:cfgrib.dataset:skipping variable: paramId==40 shortName='swvl2'\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 721, in build_dataset_components\n",
+            "    dict_merge(variables, coord_vars)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/cfgrib/dataset.py\", line 639, in dict_merge\n",
+            "    raise DatasetBuildError(\n",
+            "cfgrib.dataset.DatasetBuildError: key present and new value is different: key='depthBelowLandLayer' value=Variable(dimensions=(), data=0.0) new_value=Variable(dimensions=(), data=7.0)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "CSV file saved to /content/drive/My Drive/Realoutput.csv\n"
+          ]
+        }
+      ]
     }
   ]
 }
